[package]
name = "reply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers", "macros"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
ctrlc = { version = "3.4.0", features = ["termination"] }
figment = { version = "0.10.9", features = ["env", "toml"] }
gethostname = "0.4.3"
http = "0.2.9"
mime = "0.3.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
toml = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ['env-filter', 'json', 'time'] }


[dependencies.time]
version = "0.3.21"
features = ["macros", "local-offset", "serde", "serde-well-known", "serde-human-readable"]
